--- a/week07/masterslave1/src/main/resources/application.properties
+++ b/week07/masterslave1/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.31.74:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.username=mysql
+spring.datasource.password=testmysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 allowPublicKeyRetrieval=true
+
+spring.datasource2.url=jdbc:mysql://192.168.31.90:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource2.username=mysql
+spring.datasource2.password=testmysql
+spring.datasource2.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource3.url=jdbc:mysql://192.168.31.162:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource3.username=mysql
+spring.datasource3.password=testmysql
+spring.datasource3.driver-class-name=com.mysql.jdbc.Driver
+
 
 #pool
 spring.datasource.tomcat.max-active=20
